--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <div class="losowanie"></div>
     <div class="win"></div>
     <button id="losuj">Losuj!</button>
+    <footer>© 2019 Mateusz Iwaniszczuk</footer>
     <script src="script.js"></script>
   </body>
 </html>
